--- a/6 - Columns are Arrays/columns.ipynb
+++ b/6 - Columns are Arrays/columns.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "id": "224aef4b",
    "metadata": {
     "trusted": false
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 19,
    "id": "4abb19b9",
    "metadata": {
     "trusted": false
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "id": "70b279de",
    "metadata": {
     "trusted": false
@@ -105,7 +105,7 @@
        "... (301 rows omitted)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
+   "id": "9fddc086",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>SALARY</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>5250000</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>4988000</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>4200000</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>4200000</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>3937000</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2600000</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2503000</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>5611000</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>4800000</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>4800000</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>\n",
+       "<p>... (301 rows omitted)</p>"
+      ],
+      "text/plain": [
+       "SALARY\n",
+       "5250000\n",
+       "4988000\n",
+       "4200000\n",
+       "4200000\n",
+       "3937000\n",
+       "2600000\n",
+       "2503000\n",
+       "5611000\n",
+       "4800000\n",
+       "4800000\n",
+       "... (301 rows omitted)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "salary_select = warriors.select('SALARY')\n",
+    "salary_select"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "30f15bf4",
    "metadata": {
     "trusted": false
@@ -128,19 +203,19 @@
        "datascience.tables.Table"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(warriors.select('SALARY'))\n",
+    "type(salary_select)\n",
     "# Returns a column in a table format"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 29,
    "id": "1113f3d9",
    "metadata": {
     "trusted": false
@@ -149,35 +224,107 @@
     {
      "data": {
       "text/plain": [
-       "numpy.ndarray"
+       "array([ 5250000,  4988000,  4200000,  4200000,  3937000,  2600000,\n",
+       "        2503000,  5611000,  4800000,  4800000,  4386000,  3578000,\n",
+       "        3390000,  2678000,  1842000,   757000,   316000,   316000,\n",
+       "         241000,    32000,  6235000,  5400000,  5400000,  4913000,\n",
+       "        4441000,  4400000,  3388000,  3000000,  2343000,  2021000,\n",
+       "        1310000,   333000,   333000,  6858000,  6000000,  5540000,\n",
+       "        4935000,  4469000,  4400000,  1409000,   700000,   512000,\n",
+       "       10912000,  7482000,  5445000,  4400000,  1667000,  1507000,\n",
+       "        3000000,  2481000,  2390000,  2232000, 13700000,  8888888,\n",
+       "        7365079,  7312500,  5393300,  4506261,  1988160,  1910520,\n",
+       "        1857360,  1760000,  1404360,   448762,   423762, 15070000,\n",
+       "        9999999,  8125000,  2535260,  2157097,  2061720,  1986960,\n",
+       "         798112,   744551,   664209,   259770, 16440000,  8425625,\n",
+       "        6630000,  4000000,  3470771,  3000000,  2636696,  2323080,\n",
+       "        2216400,  1800000,  1345800,   770610,   770610,   687456,\n",
+       "         358107,   251272, 11000000,  9000000,  8275862,  7140000,\n",
+       "        4500000,  2900000,  2497320,  1709280,  1634000,  1446720,\n",
+       "        1262520,   797581,   711517,   711517,   442114,   442114,\n",
+       "         442114,   422725, 11000000,  9000000,  8937931,  4140000,\n",
+       "        3100000,  2710560,  1837560,  1600000,  1000497,   855189,\n",
+       "         825497,   825497,   736420,   632455,   118435,    17328,\n",
+       "       11000000, 10800000,  9000000,  6883800,  4447792,  3540000,\n",
+       "        3065040,  2913840,  2225000,  1254720,   855189,   854389,\n",
+       "         825497,   825497,   762195,   762195,   473604,   133723,\n",
+       "       11610000,  9000000,  6750000,  4099920,  3823000,  3117120,\n",
+       "        2956658,  2126520,  1027424,   855189,   854389,   854389,\n",
+       "         854389,   825497,   785487,   650000,   633253,   473604,\n",
+       "         473604,   211084,    75793, 13000000, 12744000, 10164000,\n",
+       "        9000000,  5400000,  4099920,  4000000,  4000000,  3958742,\n",
+       "        2798040,  2222160,  1020960,   884293,   854389,   854389,\n",
+       "         854389,   850000,   825497,   762195,   633253,   473604,\n",
+       "         211084,    75793, 14000000, 13878000, 12868632,  9887642,\n",
+       "        3500000,  2923920,  2317920,  2162419,  2000000,  1056720,\n",
+       "         875500,   660619,   490180, 15012000, 12972973, 12289544,\n",
+       "       10629213,  5305000,  3657500,  3075880,  3049920,  1145685,\n",
+       "        1145685,  1112880,  1104240,   915243,   915243,   816482,\n",
+       "         816482,   816482,   167122, 15501000, 14260870, 13800000,\n",
+       "       11710456, 11370786,  5543725,  3873398,  3815000,  2500000,\n",
+       "        2008748,  1270964,  1131960,   947276,   947276,   845059,\n",
+       "         289755, 26540100, 16663575, 15330435, 12112359, 11131368,\n",
+       "        5782450,  2898000,  1403611,  1182840,  1171560,   980431,\n",
+       "         980431,   980431,   980431,   980431,   980431,   980431,\n",
+       "         543471,   543471,   543471,   543471,   543471, 37457154,\n",
+       "       17826150, 17469565, 14814815,  7692308,  5192000,  3477600,\n",
+       "        1544951,  1471382,  1471382,  1471382,  1471382,  1378242,\n",
+       "        1312611,  1312611,  1312611,  1312611,   980431,   980431,\n",
+       "         980431,   980431,   815615,   543471,   543471,   543471,\n",
+       "         543471, 37457154, 30000000, 18988725, 17469565, 16000000,\n",
+       "        8307692,  5337000,  1644240,  1544951,  1544951,  1512601,\n",
+       "        1512601,  1378242,  1349383,   307648, 40231758, 32742000,\n",
+       "       18539130,  4464226,  2177483,  1964760,  1897800,   898310,\n",
+       "         898310,   842327,   654469,   350189,   350189])"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "salary = warriors.column('SALARY')\n",
-    "type(salary)"
+    "salary_col = warriors.column('SALARY')\n",
+    "salary_col\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 30,
+   "id": "541cfc49",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(salary_col)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "id": "a381704a",
    "metadata": {
     "trusted": false
    },
    "outputs": [],
    "source": [
-    "# np.average(warriors.select('SALARY'))\n",
+    "# np.average(salary_select)\n",
     "# can't call numpy function on tables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 33,
    "id": "6b144667",
    "metadata": {
     "trusted": false
@@ -189,18 +336,18 @@
        "4315935.9228295824"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.average(salary)"
+    "np.average(salary_col)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 36,
    "id": "b077a227",
    "metadata": {
     "trusted": false
@@ -212,19 +359,20 @@
        "array([4200000, 4800000, 5400000, 6000000])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mills_salary = warriors.where('name', 'Chris Mills').column('SALARY')\n",
-    "mills_salary"
+    "mills_salary_table = warriors.where('name', 'Chris Mills')\n",
+    "mills_salary_array = mills_salary_table.column('SALARY')\n",
+    "mills_salary_array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 37,
    "id": "b79a9da4",
    "metadata": {},
    "outputs": [
@@ -234,18 +382,18 @@
        "5100000.0"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.average(mills_salary)"
+    "np.average(mills_salary_array)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 40,
    "id": "b26baedf",
    "metadata": {
     "trusted": false
@@ -257,7 +405,7 @@
        "4200000"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 41,
    "id": "bd749b75",
    "metadata": {
     "trusted": false
@@ -341,7 +489,7 @@
        "... (296 rows omitted)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 42,
    "id": "62a30d43",
    "metadata": {},
    "outputs": [
@@ -416,7 +564,7 @@
        "... (296 rows omitted)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 43,
    "id": "2053a1fa",
    "metadata": {},
    "outputs": [
@@ -491,7 +639,7 @@
        "... (92 rows omitted)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 14,
    "id": "389bac9b",
    "metadata": {},
    "outputs": [
@@ -566,7 +714,7 @@
        "... (92 rows omitted)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 15,
    "id": "988c2ddd",
    "metadata": {},
    "outputs": [
@@ -604,7 +752,7 @@
        "           95223,     68138,     45900,     32266,     53364, 308745538])"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 16,
    "id": "fd950fb7",
    "metadata": {},
    "outputs": [
@@ -642,7 +790,7 @@
        "          101295,     73267,     50654,     33604,     57513, 311556874])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 17,
    "id": "1521bccb",
    "metadata": {},
    "outputs": [
@@ -689,7 +837,7 @@
        "         7.77490443,   0.91056733])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 18,
    "id": "e6a6ba0c",
    "metadata": {},
    "outputs": [
@@ -764,7 +912,7 @@
        "... (92 rows omitted)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
