--- a/6 - Columns are Arrays/columns.ipynb
+++ b/6 - Columns are Arrays/columns.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "224aef4b",
    "metadata": {
     "trusted": false
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "4abb19b9",
    "metadata": {
     "trusted": false
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "70b279de",
    "metadata": {
     "trusted": false
@@ -105,7 +105,7 @@
        "... (301 rows omitted)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "9fddc086",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,7 @@
        "... (301 rows omitted)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "30f15bf4",
    "metadata": {
     "trusted": false
@@ -203,7 +203,7 @@
        "datascience.tables.Table"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "1113f3d9",
    "metadata": {
     "trusted": false
@@ -278,7 +278,7 @@
        "         898310,   842327,   654469,   350189,   350189])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "541cfc49",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,7 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "a381704a",
    "metadata": {
     "trusted": false
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "id": "6b144667",
    "metadata": {
     "trusted": false
@@ -336,7 +336,7 @@
        "4315935.9228295824"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "id": "b077a227",
    "metadata": {
     "trusted": false
@@ -359,7 +359,7 @@
        "array([4200000, 4800000, 5400000, 6000000])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "id": "b79a9da4",
    "metadata": {},
    "outputs": [
@@ -382,7 +382,7 @@
        "5100000.0"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "id": "b26baedf",
    "metadata": {
     "trusted": false
@@ -405,7 +405,7 @@
        "4200000"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "id": "bd749b75",
    "metadata": {
     "trusted": false
@@ -489,7 +489,7 @@
        "... (296 rows omitted)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "id": "62a30d43",
    "metadata": {},
    "outputs": [
@@ -564,7 +564,7 @@
        "... (296 rows omitted)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "id": "2053a1fa",
    "metadata": {},
    "outputs": [
@@ -639,7 +639,7 @@
        "... (92 rows omitted)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "389bac9b",
    "metadata": {},
    "outputs": [
@@ -714,7 +714,7 @@
        "... (92 rows omitted)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "988c2ddd",
    "metadata": {},
    "outputs": [
@@ -752,7 +752,7 @@
        "           95223,     68138,     45900,     32266,     53364, 308745538])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "fd950fb7",
    "metadata": {},
    "outputs": [
@@ -790,7 +790,7 @@
        "          101295,     73267,     50654,     33604,     57513, 311556874])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "1521bccb",
    "metadata": {},
    "outputs": [
@@ -837,7 +837,7 @@
        "         7.77490443,   0.91056733])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "e6a6ba0c",
    "metadata": {},
    "outputs": [
@@ -912,7 +912,7 @@
        "... (92 rows omitted)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -924,8 +924,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "271ddf8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "odd = make_array(1, 100, 5, 7)\n",
+    "even = make_array(2, 4, 6, 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "9aed0dbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True, False,  True,  True], dtype=bool)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(odd+1) == even"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b52813a",
    "metadata": {},
    "outputs": [],
    "source": []
