quiz1 review solutions

--- a/7 - Quiz 1 Review/quiz1_review.ipynb
+++ b/7 - Quiz 1 Review/quiz1_review.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f17491a7",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2952ffaf",
    "metadata": {},
    "outputs": [
@@ -74,11 +74,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "424c9498",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Title</th> <th>Votes</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>The Dark Knight                                  </td> <td>1473049</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Inception                                        </td> <td>1271949</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>The Lord of the Rings: The Fellowship of the Ring</td> <td>1099087</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>The Lord of the Rings: The Return of the King    </td> <td>1074146</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>The Dark Knight Rises                            </td> <td>997350 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>The Lord of the Rings: The Two Towers            </td> <td>967389 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Gladiator                                        </td> <td>862216 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>The Avengers                                     </td> <td>862016 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Batman Begins                                    </td> <td>850601 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Django Unchained                                 </td> <td>804729 </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "movies2000 = imdb.where('Year', are.above_or_equal_to(2000))\n",
+    "movies2000sorted = movies2000.sort('Votes', descending = True)\n",
+    "movies2000top10 = movies2000sorted.take(np.arange(0,10))\n",
+    "moviesfinal = movies2000top10.select(\"Title\", \"Votes\")\n",
+    "moviesfinal.show()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,8 +153,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "e52b9dde",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Title</th> <th>Votes</th> <th>Percent Votes</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Fight Club     </td> <td>1177098</td> <td>27.4441      </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>American Beauty</td> <td>735056 </td> <td>17.1379      </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>The Sixth Sense</td> <td>630994 </td> <td>14.7117      </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>The Matrix     </td> <td>1073043</td> <td>25.0181      </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>The Green Mile </td> <td>672878 </td> <td>15.6882      </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "movies1999 = imdb.where('Year', 1999)\n",
+    "movies1999 = movies1999.select('Title', 'Votes')\n",
+    "votes_column = movies1999.column('Votes')\n",
+    "total_votes = sum(votes_column)\n",
+    "percent_column = votes_column / total_votes * 100\n",
+    "movies1999 = movies1999.with_column('Percent Votes', percent_column)\n",
+    "movies1999.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3916f6a8",
    "metadata": {},
    "outputs": [],
    "source": []
