uploaded functions and lab4

--- a/Lab 2 - Intro to Tables/lab02.ipynb
+++ b/Lab 2 - Intro to Tables/lab02.ipynb
@@ -1157,7 +1157,7 @@
    },
    "outputs": [],
    "source": [
-    "# Save your notebook first, then run this cell to export your submission.\n",
+    "# Run this cell to run all the autograde tests, then use Github to export to HTML.\n",
     "grader.export(pdf=False, run_tests=True)"
    ]
   },
