--- a/Lab 3 - Tables and Arrays/lab03.ipynb
+++ b/Lab 3 - Tables and Arrays/lab03.ipynb
@@ -1404,6 +1404,7 @@
    },
    "outputs": [],
    "source": [
+    "# Run this cell to run all the autograde tests, then use Github to export to HTML.\n",
     "grader.export(pdf=False, run_tests=True)"
    ]
   },
