--- a/11 - Functions/functions.ipynb
+++ b/11 - Functions/functions.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lecture 9: Functions #"
+    "# Functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,17 +37,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def triple(x):\n",
-    "    return 3 * x"
+    "    result = 3 * x\n",
+    "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -56,13 +57,14 @@
        "12"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "triple(4)"
+    "output = triple(4)\n",
+    "output"
    ]
   },
   {
@@ -122,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -133,7 +135,7 @@
        "'hahaha'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +155,7 @@
        "array([0, 3, 6, 9])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,12 +183,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def percent_of_total(s):\n",
-    "    return np.round(s / sum(s) * 100, 2)"
+    "def percent_of_total(arr):\n",
+    "    return np.round(arr / sum(arr) * 100, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 5, 6, 9])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_four=make_array(3,5,6,9)\n",
+    "first_four"
    ]
   },
   {
@@ -197,7 +220,7 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 2, 3, 4])"
+       "array([ 13.04,  21.74,  26.09,  39.13])"
       ]
      },
      "execution_count": 14,
@@ -206,8 +229,8 @@
     }
    ],
    "source": [
-    "first_four=make_array(1,2,3,4)\n",
-    "first_four"
+    "arr_out = percent_of_total(first_four)\n",
+    "arr_out"
    ]
   },
   {
@@ -218,7 +241,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 10.,  20.,  30.,  40.])"
+       "array([  0.4 ,  84.52,  15.08])"
       ]
      },
      "execution_count": 15,
@@ -227,7 +250,7 @@
     }
    ],
    "source": [
-    "percent_of_total(first_four)"
+    "percent_of_total(make_array(1, 213, 38))"
    ]
   },
   {
@@ -236,18 +259,20 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([  0.4 ,  84.52,  15.08])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[16]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mpercent_of_total\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mtest\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 2\u001b[39m, in \u001b[36mpercent_of_total\u001b[39m\u001b[34m(arr)\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mpercent_of_total\u001b[39m(arr):\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m np.round(arr / \u001b[38;5;28;43msum\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43marr\u001b[49m\u001b[43m)\u001b[49m * \u001b[32m100\u001b[39m, \u001b[32m2\u001b[39m)\n",
+      "\u001b[31mTypeError\u001b[39m: unsupported operand type(s) for +: 'int' and 'str'"
+     ]
     }
    ],
    "source": [
-    "percent_of_total(make_array(1, 213, 38))"
+    "percent_of_total('test')"
    ]
   },
   {
@@ -271,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +317,7 @@
        "2.23606797749979"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +337,7 @@
        "5.0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -368,7 +393,7 @@
        "Creed   | 1904"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,17 +408,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "def name_and_birthyear(name, year):\n",
-    "    return name + \" was born in \" + str(year) + \".\""
+    "    out_string = name + \" was born in \" + str(year) + \".\"\n",
+    "    return out_string"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +430,7 @@
        "      dtype='<U25')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -425,13 +451,13 @@
        "'Jim was born in 1985.'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ages_and_years[0]"
+    "ages_and_years.item(0)"
    ]
   },
   {
@@ -442,14 +468,14 @@
     "\n",
     "1. Define a function named percent_increase that takes two inputs: small and big. The function returns the the *percent* increase from small to big. For example, if small = 100 and big = 105, then percent_increase(small, big) returns 5.\n",
     "\n",
-    "2. Apply this function to the Gross and Adjusted Gross columns of top_movies.\n",
+    "2. Apply this function to the Gross and Gross (Adjusted) columns of top_movies.\n",
     "\n",
     "3. Attach this new column to the table."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +537,7 @@
        "... (190 rows omitted)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,6 +545,114 @@
    "source": [
     "top_movies = Table.read_table('top_movies_2017.csv').select(\"Title\", \"Gross\", \"Gross (Adjusted)\")\n",
     "top_movies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def percent_increase(small, big):\n",
+    "    ratio = big / small\n",
+    "    prop_increase = ratio - 1\n",
+    "    percent = prop_increase * 100\n",
+    "    return round(percent, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.06"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "percent_increase(99,105)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Title</th> <th>Gross</th> <th>Gross (Adjusted)</th> <th>Percent Increase</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Gone with the Wind              </td> <td>198676459</td> <td>1796176700      </td> <td>804.07          </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Star Wars                       </td> <td>460998007</td> <td>1583483200      </td> <td>243.49          </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>The Sound of Music              </td> <td>158671368</td> <td>1266072700      </td> <td>697.92          </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>E.T.: The Extra-Terrestrial     </td> <td>435110554</td> <td>1261085000      </td> <td>189.83          </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Titanic                         </td> <td>658672302</td> <td>1204368000      </td> <td>82.85           </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>The Ten Commandments            </td> <td>65500000 </td> <td>1164590000      </td> <td>1678            </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Jaws                            </td> <td>260000000</td> <td>1138620700      </td> <td>337.93          </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Doctor Zhivago                  </td> <td>111721910</td> <td>1103564200      </td> <td>887.78          </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>The Exorcist                    </td> <td>232906145</td> <td>983226600       </td> <td>322.16          </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Snow White and the Seven Dwarves</td> <td>184925486</td> <td>969010000       </td> <td>424             </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>\n",
+       "<p>... (190 rows omitted)</p>"
+      ],
+      "text/plain": [
+       "Title                            | Gross     | Gross (Adjusted) | Percent Increase\n",
+       "Gone with the Wind               | 198676459 | 1796176700       | 804.07\n",
+       "Star Wars                        | 460998007 | 1583483200       | 243.49\n",
+       "The Sound of Music               | 158671368 | 1266072700       | 697.92\n",
+       "E.T.: The Extra-Terrestrial      | 435110554 | 1261085000       | 189.83\n",
+       "Titanic                          | 658672302 | 1204368000       | 82.85\n",
+       "The Ten Commandments             | 65500000  | 1164590000       | 1678\n",
+       "Jaws                             | 260000000 | 1138620700       | 337.93\n",
+       "Doctor Zhivago                   | 111721910 | 1103564200       | 887.78\n",
+       "The Exorcist                     | 232906145 | 983226600        | 322.16\n",
+       "Snow White and the Seven Dwarves | 184925486 | 969010000        | 424\n",
+       "... (190 rows omitted)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "increase_arr = top_movies.apply(percent_increase, 'Gross', 'Gross (Adjusted)')\n",
+    "top_movies = top_movies.with_column('Percent Increase', increase_arr)\n",
+    "top_movies\n"
    ]
   },
   {
