--- a/12 - Classifying/classifying.ipynb
+++ b/12 - Classifying/classifying.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "chocolate  | 5.25"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        "strawberry | 2"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "strawberry | 5.25"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "strawberry | 4.4"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
        "... (9446 rows omitted)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,10 +284,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>team</th> <th>salary sum</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Atlanta Hawks              </td> <td>1146345077</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Bilbao Basket Bilbao Basket</td> <td>5543116   </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Boston Celtics             </td> <td>1353465387</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Brooklyn Nets              </td> <td>791940722 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Charlotte Bobcats          </td> <td>546931673 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Charlotte Hornets          </td> <td>726794747 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Chicago Bulls              </td> <td>1199006636</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Cleveland Cavaliers        </td> <td>1341890490</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Dallas Mavericks           </td> <td>1395522485</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Denver Nuggets             </td> <td>1277692469</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>\n",
+       "<p>... (33 rows omitted)</p>"
+      ],
+      "text/plain": [
+       "team                        | salary sum\n",
+       "Atlanta Hawks               | 1146345077\n",
+       "Bilbao Basket Bilbao Basket | 5543116\n",
+       "Boston Celtics              | 1353465387\n",
+       "Brooklyn Nets               | 791940722\n",
+       "Charlotte Bobcats           | 546931673\n",
+       "Charlotte Hornets           | 726794747\n",
+       "Chicago Bulls               | 1199006636\n",
+       "Cleveland Cavaliers         | 1341890490\n",
+       "Dallas Mavericks            | 1395522485\n",
+       "Denver Nuggets              | 1277692469\n",
+       "... (33 rows omitted)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "team_salaries = nba.select('team', 'salary')\n",
+    "team_salaries = team_salaries.group('team', sum)\n",
+    "team_salaries"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -295,6 +363,75 @@
    "source": [
     "# Practice 2\n",
     "Find the average salary earned by players in each position. (Start by selecting only the columns you need.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>position</th> <th>salary average</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>C       </td> <td>5.14486e+06   </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F       </td> <td>3.52996e+06   </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>G       </td> <td>3.50449e+06   </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>GF      </td> <td>2.17711e+06   </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>PF      </td> <td>4.88913e+06   </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>PG      </td> <td>4.42474e+06   </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>SF      </td> <td>4.45874e+06   </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>SG      </td> <td>4.29807e+06   </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>nan     </td> <td>1.46301e+06   </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "position | salary average\n",
+       "C        | 5.14486e+06\n",
+       "F        | 3.52996e+06\n",
+       "G        | 3.50449e+06\n",
+       "GF       | 2.17711e+06\n",
+       "PF       | 4.88913e+06\n",
+       "PG       | 4.42474e+06\n",
+       "SF       | 4.45874e+06\n",
+       "SG       | 4.29807e+06\n",
+       "nan      | 1.46301e+06"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "position_salaries = nba.select('position', 'salary')\n",
+    "position_salaries = position_salaries.group('position', np.average)\n",
+    "position_salaries"
    ]
   },
   {
@@ -313,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +494,7 @@
        "bubblegum  | pink        | 4.75"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +547,7 @@
        "strawberry | pink        | 2"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,6 +612,81 @@
    "source": [
     "# Practice 3\n",
     "Find the total paid in salaries by each team *during each season*. (Start by selecting only the columns you need.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>team</th> <th>season</th> <th>salary sum</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Atlanta Hawks</td> <td>2000  </td> <td>16018000  </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Atlanta Hawks</td> <td>2001  </td> <td>19721000  </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Atlanta Hawks</td> <td>2002  </td> <td>49862000  </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Atlanta Hawks</td> <td>2003  </td> <td>54529000  </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Atlanta Hawks</td> <td>2004  </td> <td>15724000  </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Atlanta Hawks</td> <td>2005  </td> <td>10899000  </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Atlanta Hawks</td> <td>2006  </td> <td>38198405  </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Atlanta Hawks</td> <td>2007  </td> <td>45084224  </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Atlanta Hawks</td> <td>2008  </td> <td>38116186  </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Atlanta Hawks</td> <td>2009  </td> <td>68992109  </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>\n",
+       "<p>... (648 rows omitted)</p>"
+      ],
+      "text/plain": [
+       "team          | season | salary sum\n",
+       "Atlanta Hawks | 2000   | 16018000\n",
+       "Atlanta Hawks | 2001   | 19721000\n",
+       "Atlanta Hawks | 2002   | 49862000\n",
+       "Atlanta Hawks | 2003   | 54529000\n",
+       "Atlanta Hawks | 2004   | 15724000\n",
+       "Atlanta Hawks | 2005   | 10899000\n",
+       "Atlanta Hawks | 2006   | 38198405\n",
+       "Atlanta Hawks | 2007   | 45084224\n",
+       "Atlanta Hawks | 2008   | 38116186\n",
+       "Atlanta Hawks | 2009   | 68992109\n",
+       "... (648 rows omitted)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "team_year_salaries = nba.select('team', 'season', 'salary')\n",
+    "team_year_salaries = team_year_salaries.group(['team', 'season'], sum)\n",
+    "team_year_salaries"
    ]
   },
   {
